syntax = "proto3";

option csharp_namespace = "LabApp.gRPC";

service DiagnosticianServiceGrpc {
  rpc GetAllDiagnosticians (DiagnosticianRequest) returns (DiagnosticianListReply);
  rpc GetDiagnosticianById (DiagnosticianRequest) returns (DiagnosticianReply);
  rpc AddDiagnostician (DiagnosticianCreateRequest) returns (DiagnosticianReply);
  rpc UpdateDiagnostician (DiagnosticianUpdateRequest) returns (DiagnosticianReply);
  rpc DeleteDiagnostician (DiagnosticianRequest) returns (DiagnosticianEmptyReply);
}

message DiagnosticianEmptyReply {}

message DiagnosticianRequest {
  int32 id = 1;
}

message DiagnosticianReply {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string pwzdl = 5;
  string specialization = 6;
}

message DiagnosticianCreateRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string pwzdl = 4;
  string specialization = 5;
}

message DiagnosticianUpdateRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string pwzdl = 5;
  string specialization = 6;
}

message DiagnosticianListReply {
  repeated DiagnosticianReply diagnosticians = 1;
}
